--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="https://www.facebook.com/safae.rabbouzi"style="--i:10" target="_blank"><i class='bx bxl-facebook'></i></a>
                     <a href="https://x.com/Safae_Rabbouzi"style="--i:10" target="_blank"><i class='bx bxl-twitter'></i></a>
                 </div>
-                <a href="https://drive.google.com/file/d/17DCBARLMleD-uMjV6B-mbKvm-0ZK-5zS/view?usp=drive_link" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1iCWvmLFSy2UUDajEWfi4Lf53r3gGXq0k/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
             </div>
         </section>
 
@@ -68,7 +68,7 @@
                         I have a great capacity to take on new challenges and learn new skills.
                         I am currently seeking roles where I can utilize my experience and skill.<br>
                         <br>
-                        <a href="https://drive.google.com/file/d/17DCBARLMleD-uMjV6B-mbKvm-0ZK-5zS/view?usp=drive_link" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
+                        <a href="https://drive.google.com/file/d/1iCWvmLFSy2UUDajEWfi4Lf53r3gGXq0k/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
                     </p>
                 </div>
             </div>
