--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                                 ASP.Net Core
                                 </span>
                             </div>
-                            <a class="code" href="" target="_blank">View Code</a>
+                            <a class="code" href="https://github.com/safae-rabbouzi/Competition-website" target="_blank">View Code</a>
                         </div>
                     </div>
                     <!--cards -->
