--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                             class="img-proj" src="./img/innomi.jpeg">
                         </div>
                         <div class="title">
-                            <h1>InnoMiathe</h1>
+                            <h1>InnoMIAte</h1>
                         </div>
                         <div class="des">
                             <p>Competition website, where the journey from start to finish is filled with excitement, challenge, and camaraderie. </p>
