--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         I have a great capacity to take on new challenges and learn new skills.
                         I am currently seeking roles where I can utilize my experience and skill.<br>
                         <br>
-                        <a href="https://drive.google.com/file/d/1iCWvmLFSy2UUDajEWfi4Lf53r3gGXq0k/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
+                        <a href="https://drive.google.com/file/d/1tpiff47T9jXqmtgwz92c7P8Ab_B0OrNt/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
                     </p>
                 </div>
             </div>
@@ -101,6 +101,12 @@
                         <img alt="Node Js logo" class="skill-icon" src="./img/logos/js.png"/>
                         <span>
                             Javascript
+                        </span>
+                    </div>
+                    <div class="techs">
+                        <img alt="CSS logo" class="skill-icon" src="./img/logos/Bootstrap.png"/>
+                        <span>
+                            Bootstrap
                         </span>
                     </div>
                     <div class="techs">
@@ -163,6 +169,12 @@
                         </span>
                     </div>
                     <div class="techs">
+                        <img alt="SQL Server logo" class="skill-icon" src="./img/logos/postgresql.png"/>
+                        <span>
+                        PostgreSQL
+                        </span>
+                    </div>
+                    <div class="techs">
                         <img alt="Sqlite logo" class="skill-icon" src="./img/logos/sqlite.png"/>
                         <span>
                         SQLite
@@ -197,6 +209,12 @@
                         </span>
                     </div>
                     <div class="techs">
+                        <img alt="Figma logo" class="skill-icon" src="./img/logos/visual studio.png"/>
+                        <span>
+                            Visual Studio
+                        </span>
+                    </div>
+                    <div class="techs">
                         <img alt="VS Code logo" class="skill-icon" src="./img/logos/figma.png"/>
                         <span>
                         Figma
@@ -225,7 +243,7 @@
                             <img class="img-proj" src="./img/bySellify.png">
                         </div>
                         <div class="title">
-                            <h1>BySellify</h1>
+                            <h1>BuySellify</h1>
                         </div>
                         <div class="des">
                             <p>E-commerce platform tailored to the dynamic world of fashion, specifically focusing on clothing and jewelry for both men and women. </p>
