--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
             </div>
                     
-            <!-- Android -->
+            <!-- Databese -->
             <div class="cards reveal">
                 <div class="titles">
                     <h1>Database</h1>
@@ -208,12 +208,7 @@
                         VS Code
                         </span>
                     </div>
-                    <div class="techs">
-                        <img alt="Figma logo" class="skill-icon" src="./img/logos/visual studio.png"/>
-                        <span>
-                            Visual Studio
-                        </span>
-                    </div>
+                    
                     <div class="techs">
                         <img alt="VS Code logo" class="skill-icon" src="./img/logos/figma.png"/>
                         <span>
