--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         I have a great capacity to take on new challenges and learn new skills.
                         I am currently seeking roles where I can utilize my experience and skill.<br>
                         <br>
-                        <a href="https://drive.google.com/file/d/1tpiff47T9jXqmtgwz92c7P8Ab_B0OrNt/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
+                        <a href="https://drive.google.com/file/d/1Dbi02FVNjBmRWFVcsdRUrwIwEnc1LKZm/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
                     </p>
                 </div>
             </div>
@@ -169,7 +169,7 @@
                         </span>
                     </div>
                     <div class="techs">
-                        <img alt="SQL Server logo" class="skill-icon" src="./img/logos/postgresql.png"/>
+                        <img alt="PostgreSQL logo" class="skill-icon" src="./img/logos/postgresql.png"/>
                         <span>
                         PostgreSQL
                         </span>
@@ -197,6 +197,12 @@
                         </span>
                     </div>
                     <div class="techs">
+                        <img alt="GitLab logo" class="skill-icon" src="./img/logos/gitlab.png"/>
+                        <span>
+                        GitLab
+                        </span>
+                    </div>
+                    <div class="techs">
                         <img alt="GitHub logo" class="skill-icon" src="./img/logos/github.png"/>
                         <span>
                         GitHub
@@ -215,9 +221,9 @@
                         </span>
                     </div>
                     <div class="techs">
-                        <img alt="Android Studio logo" class="skill-icon" src="./img/logos/android studio.png"/>
+                        <img alt="Docker logo" class="skill-icon" src="./img/logos/docker.png"/>
                         <span>
-                        Android Studio
+                        Docker
                         </span>
                     </div>
                 </div>
