--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="https://www.facebook.com/safae.rabbouzi"style="--i:10" target="_blank"><i class='bx bxl-facebook'></i></a>
                     <a href="https://x.com/Safae_Rabbouzi"style="--i:10" target="_blank"><i class='bx bxl-twitter'></i></a>
                 </div>
-                <a href="https://drive.google.com/file/d/1WjhT34bLZGRUXRP0RqzI_Bm1he4qatxC/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
+                <a href="https://drive.google.com/file/d/12NF3He1t3SJPGb76nsTbD3z8q6X8lWxf/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download Resume</a>
             </div>
         </section>
 
@@ -69,7 +69,7 @@
                         I have a great capacity to take on new challenges and learn new skills.
                         I am currently seeking roles where I can utilize my experience and skill.<br>
                         <br>
-                        <a href="https://drive.google.com/file/d/1WjhT34bLZGRUXRP0RqzI_Bm1he4qatxC/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
+                        <a href="https://drive.google.com/file/d/12NF3He1t3SJPGb76nsTbD3z8q6X8lWxf/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Download Resume</a>
                     </p>
                 </div>
             </div>
@@ -477,6 +477,7 @@
                 <div class="contact-icons">
                     <a href="https://www.linkedin.com/in/safae-rabbouzi-b80621209/" target="_blank"><i class="bx bxl-linkedin"></i></a>
                     <a href="https://github.com/safae-rabbouzi" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="mailto:safaerabbouzi20@gmail.com"style="--i:7" target="_blank"><i class='bx bxl-gmail'></i></a>
                     <a href="https://www.instagram.com/safae_rabbouzi" target="_blank"><i class="bx bxl-instagram"></i></a>
                     <a href="https://www.facebook.com/safae.rabbouzi" target="_blank"><i class='bx bxl-facebook'></i></a>
                     <a href="https://x.com/Safae_Rabbouzi" target="_blank"><i class='bx bxl-twitter'></i></a>
