--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="home-sci">
                     <a href="https://www.linkedin.com/in/safae-rabbouzi-b80621209/"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/safae-rabbouzi"style="--i:8" target="_blank"><i class='bx bxl-github'></i></a>
-                    <a href="mailto:safaerabbouzi20@gmail.com"style="--i:7" target="_blank"><i class='bx bxl-gmail'></i></a>
+                    <a href="mailto:safaerabbouzi@gmail.com"style="--i:7" target="_blank"><i class='bx bxl-gmail'></i></a>
                     <a href="https://www.instagram.com/safae_rabbouzi"style="--i:9" target="_blank"><i class='bx bxl-instagram' ></i></a>
                     <a href="https://www.facebook.com/safae.rabbouzi"style="--i:10" target="_blank"><i class='bx bxl-facebook'></i></a>
                     <a href="https://x.com/Safae_Rabbouzi"style="--i:10" target="_blank"><i class='bx bxl-twitter'></i></a>
@@ -470,7 +470,7 @@
                 <center><h4>Get in Touch</h4>
                 <div class="contact-list">
                     <li><i class="bx bxs-phone-call" ></i>+212 609755305</li>
-                    <li><i class='bx bxl-gmail'></i><a target="_blank" href="mailto:safaerabbouzi@gmail.com">safaerabbouzi20@gmail.com</a></li>
+                    <li><i class='bx bxl-gmail'></i><a target="_blank" href="mailto:safaerabbouzi@gmail.com">safaerabbouzi@gmail.com</a></li>
                     <li><i class='bx bxs-location-plus' ></i>Oriental, Morocco</li>
                     
                 </div>
