--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         J'ai une grande capacité à relever de nouveaux défis et à apprendre de nouvelles compétences.
                         Je suis actuellement à la recherche d'opportunités pour mettre à profit mon expérience et mes compétences.<br>
                         <br>
-                        <a href="https://drive.google.com/file/d/1U0BxZEP954o8BpInpyhWKLeSLbuKiGJ5/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Télécharger le CV</a>
+                        <a href="https://drive.google.com/file/d/1U0BxZEP954o8BpInpyhWKLeSLbuKiGJ5/view?usp=sharing" style="--i:11" class="abtbtn-box" target="_blank">Télécharger Resume</a>
                     </p>
                 </div>
             </div>
